@startuml
'https://plantuml.com/sequence-diagram

class Point {
    -double x
    -double y
    +Point(double x, double y)
    +double distanceTo(Point otherPoint)
    +boolean pointInCurve(Point point, Point endPoint)
    +boolean pointInCurve(Point point, Point centerPoint, function curve)
}

abstract class GeometricShape {
    +{abstract} double area()
    +{abstract} double perimeter()
    +{abstract} boolean pointInOutline()
}

abstract class Polygon {
    - Point points[]
    -double base
    -double height
    +Polygon(double base, double height)
    +double area()
    +double perimeter()
    +double getBase()
    +double getHeight()
    -boolean pointInEdge()
    +boolean pointInOutline()
}

class Rectangle {
    +Rectangle(Point points[4])
    +double area()
    +double perimeter()
}

class Triangle {
    +Triangle(Point points[3])
    +double area()
}

abstract class RoundShape {
     -Point centerPoint
     +RoundShape(Point centerPoint)
     +{abstract} double area()
     +{abstract} double perimeter()
 }

class Circle {
    -double radius
    +Circle(Point centerPoint, double radius)
    +double area()
    +double perimeter()
    +boolean pointInOutline()
}

class Ellipse {
    -double a
    -double b
    +Ellipse(Point centerPoint, double a, double b)
    +double area()
    +double perimeter()
}

GeometricShape <|-- Polygon
GeometricShape <|-- RoundShape
Polygon <|-- Triangle
Polygon <|-- Rectangle
RoundShape <|-- Circle
RoundShape <|-- Ellipse
Polygon *-- Point
RoundShape *-- Point


@enduml